fixed info cards alignment with flexbox

--- a/style.css
+++ b/style.css
@@ -31,8 +31,22 @@
     font-weight: bold;
     color: white;
     cursor: pointer;
-    
 
+}
+
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+.section-heading h2{
+    font-size: 32px;
+    margin-bottom: ;
+}
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    line-height:30px ;
+    color: #757575;
 
 
 }
@@ -98,5 +112,35 @@ nav .menu a{
 #banner .banner-image{
     max-width: 585px;
     vertical-align: middle;
+
+}
+
+#about{
+    padding-top:130px;
+    margin-bottom: 30px;
+}
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+.about-info .info-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+
+    
+}
+.about-info .info-card h4{
+    font-size: 20px;
+    
 
 }
